crates/talkbank-clan/tests/snapshots/transform_golden__dataclean_retrace@rust.snap
---
source: crates/talkbank-clan/tests/transform_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Child, MOT Mother
@ID:	eng|corpus|CHI|3;00.||||Child|||
@ID:	eng|corpus|MOT|||||Mother|||
@Comment:	Retrace annotations: partial [/], complete [//], multiple [///],
	uncertain [/?] , reformulation [/-]
@Comment:	Constructs: retrace_partial, retrace_complete, retrace_multiple,
	retrace_uncertain, retrace_reformulation
@Comment:	--- Single-word retraces (no angle brackets) ---
*CHI:	I [/] I want that .
*MOT:	the dog [//] the cat ran .
*CHI:	I want the [///] give me that .
*MOT:	is that [/?] a toy ?
*CHI:	ana [//] an .
*MOT:	the book [/-] the magazine is here .
@Comment:	--- Single-word retraces WITH replacement [: ] ---
@Comment:	These are the critical case: word [: replacement] [* error] [//] correction
@Comment:	The retrace must wrap the replaced word; the replacement must NOT
@Comment:	be counted for %mor alignment.
*CHI:	tika@u [: kitty] [* p:n] [//] kitty is nice .
%mor:	noun|kitty aux|be-Fin-Ind-Pres-S3 adj|nice-S1 .
%gra:	1|3|NSUBJ 2|3|COP 3|0|ROOT 4|3|PUNCT
*MOT:	lɛɾɪ@u [: later] [* p:n] [//] later in the day .
%mor:	adv|late adp|in det|the-Def-Art noun|day .
%gra:	1|4|ADVMOD 2|4|CASE 3|4|DET 4|0|ROOT 5|4|PUNCT
*CHI:	male [: female] [* s:r] [/] male [: female] [* s:r] .
%mor:	adj|female-S1 .
%gra:	1|0|ROOT 2|1|PUNCT
@End
