crates/talkbank-clan/tests/snapshots/transform_golden__gem_filtered@rust.snap
---
source: tests/transform_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Child, MOT Mother
@ID:	eng|corpus|CHI|3;0||||Child|||
@ID:	eng|corpus|MOT|||||Mother|||
@Comment:	Episode and inline headers: @New Episode, @G, @Bg, @Eg, @Bck, @Blank, @Number, @Page, @T
@Comment:	Constructs: new_episode_header, g_header, bg_header, eg_header,
	bck_header, blank_header, number_header, page_header, t_header
@Bck:	background noise from traffic outside
@G:	morning routine
@T:	cereal preparation
@New Episode
@Number:	2
@Page:	42
@Bg:	afternoon play
*CHI:	can we go outside ?
@Blank
*MOT:	sure let us get your shoes .
@Eg:	afternoon play
@End
