crates/talkbank-clan/tests/snapshots/transform_golden__lines_add_basic@rust.snap
---
source: tests/transform_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Child, MOT Mother
@ID:	eng|corpus|CHI|3;0|female|typical||Child|||
@ID:	eng|corpus|MOT|||||Mother|||
@Comment:	Minimal valid CHAT file with two speakers
@Comment:	Constructs: basic utterances, three standard terminators (. ? !), simple words
    1 *CHI:	I want some cookies .
    2 *MOT:	what kind of cookies ?
    3 *CHI:	the chocolate ones !
    4 *MOT:	we can make some together .
@End
