crates/talkbank-clan/tests/snapshots/transform_golden__makemod_basic@rust.snap
---
source: tests/transform_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Child, MOT Mother
@ID:	eng|corpus|CHI|3;0|female|typical||Child|||
@ID:	eng|corpus|MOT|||||Mother|||
@Comment:	Minimal valid CHAT file with two speakers
@Comment:	Constructs: basic utterances, three standard terminators (. ? !), simple words
*CHI:	I want some cookies .
%mod:	AY1 W AA1 N T S AH1 M K UH1 K IY0 Z
*MOT:	what kind of cookies ?
%mod:	W AH1 T K AY1 N D AH1 V K UH1 K IY0 Z
*CHI:	the chocolate ones !
%mod:	DH AH0 CH AA1 K L AH0 T W AH1 N Z
*MOT:	we can make some together .
%mod:	W IY1 K AE1 N M EY1 K S AH1 M T AH0 G EH1 DH ER0
@End
