crates/talkbank-clan/tests/snapshots/transform_golden__quotes_quotations@rust.snap
---
source: tests/transform_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Child, MOT Mother
@ID:	eng|corpus|CHI|3;0||||Child|||
@ID:	eng|corpus|MOT|||||Mother|||
@Comment:	Quoted speech with Unicode double-quote delimiters
@Comment:	Constructs: quotation, double_quote, left_double_quote, right_double_quote
*CHI:	“&~foo and more” .
*MOT:	she said “I want cookies” .
@End
