crates/talkbank-clan/tests/snapshots/transform_golden__roles_rename@rust.snap
---
source: tests/transform_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	TAR Child, MOT Mother
@ID:	eng|corpus|TAR|3;0|female|typical||Child|||
@ID:	eng|corpus|MOT|||||Mother|||
@Comment:	Minimal valid CHAT file with two speakers
@Comment:	Constructs: basic utterances, three standard terminators (. ? !), simple words
*TAR:	I want some cookies .
*MOT:	what kind of cookies ?
*TAR:	the chocolate ones !
*MOT:	we can make some together .
@End
